--- a/index.html
+++ b/index.html
@@ -1,36 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Vulnerable Login</title>
-  </head>
-  <body>
-    <h1>Login</h1>
-    <form id="loginForm">
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username">
-      <br>
-      <br>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password">
-      <br>
-      <br>
-      <button type="button" onclick="login()">Login</button>
-    </form>
-    <script>
-      functionlogin() {
-        const username = document.getElementById('username').value;
-        const password = document.getElementById('password').value;
-        localStorage.setItem('username', username);
-        localStorage.setItem('password', password);
-        if (username === 'admin' && password === 'admin123') {
-          alert('Login successful!');
-        } else {
-          alert('Invalid credentials!');
-        }
-        document.body.innerHTML += `
-										<p>Welcome, ${username}!</p>`;
-      }
-    </script>
-  </body>
-</html>
+1. Use of localStorage to store credentials
+
+
+localStorage.setItem('username', username);
+localStorage.setItem('password', password);
+
+//Vulnerability:
+
+Storing credentials in localStorage is extremely insecure, as anyone with access to the browser can view these 
+credentials through the developer console.
+Remediation:
+
+Never store credentials in localStorage. Use secure authentication and storage mechanisms, 
+such as session tokens that are managed on the server and stored securely in cookies with HttpOnly and Secure flags.
